z-index fix

--- a/app/javascript/pages/DemiurgeBattle/DemiurgeBattle.scss
+++ b/app/javascript/pages/DemiurgeBattle/DemiurgeBattle.scss
@@ -90,6 +90,7 @@
     }
 
     .error {
+      z-index: -10;
       margin: 10px;
       color: red;
       font-size: 30px;
